# padzero-python

./: README.md  padzero.py  pyproject.toml
tests/: test_func.py
